basic taq, crsp and compustat queries up

--- a/WRDS/testing.ipynb
+++ b/WRDS/testing.ipynb
@@ -1,34 +1,41 @@
-
-
-load_dotenv()
-os.environ['PGPASSFILE'] = os.getenv("PGPASS_PATH")
-wrds_username = os.getenv("WRDS_username")
-
-# ----------------------------------------------------------------------------------
-# 2. TAQ DATA (Trade and Quote - Millisecond Resolution)
-# ----------------------------------------------------------------------------------
-# Library: taqmsec
-# Table:   cqm (Consolidated Quotes)
-# ----------------------------------------------------------------------------------
-
-print("Connecting to TAQ...")
-
-with wrds.Connection(wrds_username=wrds_username) as db:
-    
-    print("\n--- TAQ CONSOLIDATED QUOTES (taqmsec.cqm) ---")
-    
-    # Warning: TAQ tables are massive. Always filter by Date and Limit rows.
-    query_taq = """
-    SELECT date, time_m, sym_root, bid, ask, bidsiz, asksiz
-    FROM taqmsec.cqm
-    WHERE date = '2024-01-04'
-    LIMIT 5
-    """
-    
-    try:
-        df = db.raw_sql(query_taq)
-        print(df)
-    except Exception as e:
-        print(f"Query Failed: {e}")
-        
-print("\nTAQ Connection Closed.")
+{
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import wrds\n",
+        "from dotenv import load_dotenv\n",
+        "import pandas as pd\n",
+        "\n",
+        "load_dotenv()\n",
+        "os.environ['PGPASSFILE'] = os.getenv(\"PGPASS_PATH\")\n",
+        "wrds_username = os.getenv(\"WRDS_username\")\n"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python (emerytrading)",
+      "language": "python",
+      "name": "emerytrading"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 2
+}
