file organization, working on wrds queries

--- a/WRDS/data_exploration.ipynb
+++ b/WRDS/data_exploration.ipynb
@@ -6,22 +6,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
-        "import wrds\n",
-        "from dotenv import load_dotenv\n",
-        "import pandas as pd\n",
-        "\n",
-        "load_dotenv()\n",
-        "os.environ['PGPASSFILE'] = os.getenv(\"PGPASS_PATH\")\n",
-        "wrds_username = os.getenv(\"WRDS_username\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "# CRSP Test\n",
         "\n",
         "import os\n",
@@ -87,7 +71,65 @@
         "print(\"Does it exist?\", file_path.exists())\n",
         "\n",
         "df = pd.read_parquet(file_path)\n",
-        "df.head()"
+        "df.head()\n",
+        "\n",
+        "print(df.columns)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Looking at available fields in the fundq table \n",
+        "\n",
+        "import os\n",
+        "import wrds\n",
+        "from dotenv import load_dotenv\n",
+        "import pandas as pd\n",
+        "\n",
+        "load_dotenv()\n",
+        "os.environ['PGPASSFILE'] = os.getenv(\"PGPASS_PATH\")\n",
+        "wrds_username = os.getenv(\"WRDS_username\")\n",
+        "\n",
+        "# Initialize a connection object using with context manager\n",
+        "with wrds.Connection(wrds_username=wrds_username) as db:\n",
+        "\n",
+        "    try:\n",
+        "        df = db.raw_sql(\"SELECT * FROM comp.fundq LIMIT 0\")\n",
+        "        print(df.columns.tolist())\n",
+        "        print(len(df.columns.tolist()))\n",
+        "    except Exception as e:\n",
+        "        print(f\"\\nFailed: {e}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Looking at available fields in the comp.comapny table \n",
+        "\n",
+        "import os\n",
+        "import wrds\n",
+        "from dotenv import load_dotenv\n",
+        "import pandas as pd\n",
+        "\n",
+        "load_dotenv()\n",
+        "os.environ['PGPASSFILE'] = os.getenv(\"PGPASS_PATH\")\n",
+        "wrds_username = os.getenv(\"WRDS_username\")\n",
+        "\n",
+        "# Initialize a connection object using with context manager\n",
+        "with wrds.Connection(wrds_username=wrds_username) as db:\n",
+        "\n",
+        "    try:\n",
+        "        df = db.raw_sql(\"SELECT * FROM comp.company LIMIT 0\")\n",
+        "        print(df.columns.tolist())\n",
+        "        print(len(df.columns.tolist()))\n",
+        "    except Exception as e:\n",
+        "        print(f\"\\nFailed: {e}\")"
       ]
     }
   ],
