--- a/WRDS/data_exploration.ipynb
+++ b/WRDS/data_exploration.ipynb
@@ -51,9 +51,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "File path: c:\\Users\\carso\\Development\\emerytrading\\Data\\crsp\\crsp_dsf_2023.parquet\n",
+            "Does it exist? True\n",
+            "Index(['permno', 'hdrcusip', 'permco', 'siccd', 'nasdissuno', 'yyyymmdd',\n",
+            "       'sharetype', 'securitytype', 'securitysubtype', 'usincflg',\n",
+            "       'issuertype', 'primaryexch', 'conditionaltype', 'tradingstatusflg',\n",
+            "       'dlycaldt', 'dlydelflg', 'dlyprc', 'dlyprcflg', 'dlycap', 'dlycapflg',\n",
+            "       'dlyprevprc', 'dlyprevprcflg', 'dlyprevdt', 'dlyprevcap',\n",
+            "       'dlyprevcapflg', 'dlyret', 'dlyretx', 'dlyreti', 'dlyretmissflg',\n",
+            "       'dlyretdurflg', 'dlyorddivamt', 'dlynonorddivamt', 'dlyfacprc',\n",
+            "       'dlydistretflg', 'dlyvol', 'dlyclose', 'dlylow', 'dlyhigh', 'dlybid',\n",
+            "       'dlyask', 'dlyopen', 'dlynumtrd', 'dlymmcnt', 'dlyprcvol',\n",
+            "       'dlycumfacpr', 'dlycumfacshr', 'cusip', 'ticker', 'exchangetier',\n",
+            "       'shrout'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ],
       "source": [
         "# Take a look at crsp parquet files we have downloaded\n",
         "import os\n",
@@ -71,9 +92,9 @@
         "print(\"Does it exist?\", file_path.exists())\n",
         "\n",
         "df = pd.read_parquet(file_path)\n",
-        "df.head()\n",
         "\n",
-        "print(df.columns)"
+        "print(df.columns)\n",
+        "#print(len(df))\n"
       ]
     },
     {
@@ -130,6 +151,22 @@
         "        print(len(df.columns.tolist()))\n",
         "    except Exception as e:\n",
         "        print(f\"\\nFailed: {e}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "df = pd.read_parquet(r'C:\\Users\\carso\\Development\\emerytrading\\Data\\compustat_fundamentals_q\\edgecases_Jan2025.parquet')\n",
+        "\n",
+        "df.to_csv(r'C:\\Users\\carso\\Development\\emerytrading\\Data\\compustat_fundamentals_q\\edgecases_Jan2025.csv')\n",
+        "\n",
+        "print(len(df))\n",
+        "print(df)"
       ]
     }
   ],
