--- a/notebooks/exploration/crsp_exploration.ipynb
+++ b/notebooks/exploration/crsp_exploration.ipynb
@@ -32,10 +32,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "280c5269",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "MISSING DATA ANALYSIS: dlycumfacshr\n",
+      "============================================================\n",
+      "Total missing values: 7,553 (0.03%)\n",
+      "Missing across 7,553 unique securities (43.65%)\n",
+      "Total securities: 17,303\n",
+      "============================================================\n",
+      "\n",
+      "============================================================\n",
+      "MARKET CAP ANALYSIS FOR MISSING: dlycumfacshr\n",
+      "============================================================\n",
+      "Total records with missing dlycumfacshr: 7,553\n",
+      "Records with missing market cap: 7,553\n",
+      "------------------------------------------------------------\n",
+      "Market Cap Distribution (for non-NA caps):\n",
+      "count   0.00\n",
+      "mean     NaN\n",
+      "std      NaN\n",
+      "min      NaN\n",
+      "25%      NaN\n",
+      "50%      NaN\n",
+      "75%      NaN\n",
+      "max      NaN\n",
+      "Name: dlycap, dtype: float64\n",
+      "============================================================\n",
+      "\n",
+      "============================================================\n",
+      "TIME SERIES MISSING DATA ANALYSIS: dlycumfacshr\n",
+      "============================================================\n",
+      "Total missing records: 7,553\n",
+      "Date range: 2010-01-04 to 2024-12-31\n",
+      "Days with missing: 2,834 / 3,774\n",
+      "Average missing per affected day: 2.67\n",
+      "------------------------------------------------------------\n",
+      "Most recent 20 dates with missing data:\n",
+      "dlycaldt\n",
+      "2024-11-29     5\n",
+      "2024-12-02     3\n",
+      "2024-12-03     4\n",
+      "2024-12-04     1\n",
+      "2024-12-06     4\n",
+      "2024-12-09     3\n",
+      "2024-12-10     1\n",
+      "2024-12-11     3\n",
+      "2024-12-12     2\n",
+      "2024-12-13     4\n",
+      "2024-12-16     9\n",
+      "2024-12-17     9\n",
+      "2024-12-18     3\n",
+      "2024-12-20     4\n",
+      "2024-12-23    10\n",
+      "2024-12-24     5\n",
+      "2024-12-26     2\n",
+      "2024-12-27     2\n",
+      "2024-12-30     5\n",
+      "2024-12-31     1\n",
+      "dtype: int64\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "TERMINAL OBSERVATION ANALYSIS\n",
+      "------------------------------------------------------------\n",
+      "Securities with missing data: 7,553\n",
+      "All missing values are terminal: 7,553 (100.0%)\n",
+      "Non-terminal missing values: 0\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "CONTIGUITY ANALYSIS\n",
+      "------------------------------------------------------------\n",
+      "Contiguous missing blocks: 7,553 (100.0%)\n",
+      "Scattered missing values: 0\n",
+      "============================================================\n",
+      "\n",
+      "============================================================\n",
+      "TRADING STATUS ANALYSIS FOR MISSING: dlycumfacshr\n",
+      "============================================================\n",
+      "Total records with missing dlycumfacshr: 7,553\n",
+      "------------------------------------------------------------\n",
+      "Trading Status Breakdown:\n",
+      "tradingstatusflg\n",
+      "D       7545\n",
+      "<NA>       8\n",
+      "Name: count, dtype: Int64\n",
+      "------------------------------------------------------------\n",
+      "Delisted ('D') Securities: 7,545 (99.9%)\n",
+      "============================================================\n",
+      "\n",
+      "============================================================\n",
+      "SHARE TYPE ANALYSIS FOR MISSING: dlycumfacshr\n",
+      "============================================================\n",
+      "Total records with missing dlycumfacshr: 7,553\n",
+      "------------------------------------------------------------\n",
+      "Share Type Breakdown:\n",
+      "sharetype\n",
+      "N/A     7545\n",
+      "<NA>       8\n",
+      "Name: count, dtype: Int64\n",
+      "============================================================\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -47,7 +152,7 @@
     "\n",
     "df = pd.read_parquet(file_path)\n",
     "\n",
-    "# df.cust.describe(level=\"missing\")\n",
+    "# df.cust.describe()\n",
     "df.cust.missing_check_permno(attribute='dlycumfacshr')\n",
     "df.cust.missing_check_mktcap(attribute='dlycumfacshr')\n",
     "df.cust.missing_check_timeseries(attribute='dlycumfacshr')\n",
