--- a/notebooks/exploration/crsp_exploration.ipynb
+++ b/notebooks/exploration/crsp_exploration.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "280c5269",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
     "import pandas as pd\n",
     "\n",
     "from bearplanes.utils.describe_dataframes import DescribeDataframes\n",
-    "from bearplanes.utils.paths import (get_data_dir, get_processed_data_dir, get_project_root)\n",
+    "from bearplanes.utils.paths import (get_processed_data_dir)\n",
     "\n",
     "crsp_dir = get_processed_data_dir(\"wrds\",\"crsp\")\n",
     "file_path = crsp_dir / f\"crsp_dsf_combined.parquet\"\n",
@@ -159,6 +159,63 @@
     "df.cust.missing_check_tradingstatus(attribute='dlycumfacshr')\n",
     "df.cust.missing_check_sharetype(attribute='dlycumfacshr')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "508f2df6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "from bearplanes.utils.paths import get_processed_data_dir\n",
+    "from bearplanes.strategies.dividend_cuts.crsp_cleaning import (filter_noise,filter_security_type,\n",
+    "                                                                sort_by_permno_date, adjust_price)\n",
+    "\n",
+    "crsp_dir = get_processed_data_dir(\"wrds\",\"crsp\")\n",
+    "file_path = crsp_dir / f\"crsp_dsf_combined.parquet\"\n",
+    "\n",
+    "df = pd.read_parquet(file_path)\n",
+    "\n",
+    "# filter noise, filter security type, adjust price\n",
+    "df = filter_noise(df)\n",
+    "df = filter_security_type(df)\n",
+    "df = adjust_price(df)\n",
+    "\n",
+    "# drop all rows where the trading status flag is D for delisted\n",
+    "mask_to_remove = df['tradingstatusflg'] == 'D'\n",
+    "to_keep = ~mask_to_remove\n",
+    "\n",
+    "# filter\n",
+    "df = df[to_keep]\n",
+    "\n",
+    "# sort\n",
+    "df = sort_by_permno_date(df)\n",
+    "\n",
+    "num_observations = 0\n",
+    "\n",
+    "# group by permno\n",
+    "for permno, group in df.group_by('permno'):\n",
+    "    # create bar to bar gap \n",
+    "    group['overnight_gap'] = ((group['open'].shift(1) - group['close']) / group['open'] ) * 100\n",
+    "\n",
+    "    observations = group['overnight_gap'] > 50\n",
+    "\n",
+    "    num_observations+= len(observations)    \n",
+    "\n",
+    "print(num_observations)\n",
+    "print(num_observations/len(df))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6bc913e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -436,37 +493,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c23c2b75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Drop columns exchangetier, hdrcusip, \n",
-    "\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "from pathlib import Path\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n",
-    "table = 'crsp_dsf' # is actually crspq.dsf_v2\n",
-    "year = '2024'\n",
-    "\n",
-    "# For notebooks, construct path relative to known project structure\n",
-    "# The notebook is in Strategies/dividend_cuts/, so go up 2 levels to project root\n",
-    "current_dir = Path.cwd()\n",
-    "OUTPUT_DIR = current_dir.parent.parent / \"Data\" / \"crsp\"\n",
-    "output_file = OUTPUT_DIR / f\"{table}_{year}.parquet\"\n",
-    "\n",
-    "df = pd.read_parquet(output_file)\n",
-    "\n",
-    "df = df.drop(['exchangetier', 'hdrcusip'], axis=1)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e4887146",
    "metadata": {},
    "outputs": [],
@@ -566,39 +592,6 @@
     "\n",
     "# print(df.columns)\n",
     "# print(df.dtypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ffb7f49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# permno                       Int64 keep\n",
-    "# hdrcusip            string[python] header cusip 8 chars\n",
-    "# cusip               string[python] cusip\n",
-    "# ticker              string[python] ticker\n",
-    "# shrout                       Int64 shares outstanding\n",
-    "# permco                       Int64 keep \n",
-    "# siccd                        Int64 sic code\n",
-    "# dlycaldt            string[python] daily calendar date (convert to pandas)\n",
-    "# sharetype           string[python] share type keep (only keep NS and '')\n",
-    "# securitytype        string[python] security type - keep (use to filter out all types but EQTY)\n",
-    "# securitysubtype     string[python] sub type - keep (use to filter for only COM (common))\n",
-    "# usincflg            string[python] US incorporation flag\n",
-    "# primaryexch         string[python] primary exchange\n",
-    "# conditionaltype     string[python] conditional type - keep (only want RW (regular way))\n",
-    "# tradingstatusflg    string[python] trading status - keep (need to use for more specific security by security filtering)\n",
-    "# dlycap                     Float64 daily capitalization\n",
-    "# dlycapflg           string[python] daily capitalization flag\n",
-    "# dlydistretflg       string[python] daily distribution return impact flag (probably NEED)\n",
-    "# dlyvol                     Float64 daily volume\n",
-    "# dlyclose                   Float64 daily close\n",
-    "# dlylow                     Float64 daily low\n",
-    "# dlyhigh                    Float64 daily high \n",
-    "# dlyopen                    Float64 daily open\n",
-    "# dlycumfacshr               Float64 daily cumulative factor to adjust shares/volume"
    ]
   }
  ],
