update readme, features, start of labeling class

--- a/notebooks/exploration/crsp_exploration.ipynb
+++ b/notebooks/exploration/crsp_exploration.ipynb
@@ -14,16 +14,14 @@
     "\n",
     "load_dotenv()\n",
     "\n",
-    "table = 'crsp_dsf' # is actually crspq.dsf_v2\n",
-    "year = '2024'\n",
+    "from bearplanes.utils.paths import get_processed_data_dir\n",
+    "from bearplanes.strategies.dividend_cuts.crsp_cleaning import (filter_noise,filter_security_type,\n",
+    "                                                                sort_by_permno_date, adjust_price)\n",
     "\n",
-    "# For notebooks, construct path relative to known project structure\n",
-    "# The notebook is in Strategies/dividend_cuts/, so go up 2 levels to project root\n",
-    "current_dir = Path.cwd()\n",
-    "OUTPUT_DIR = current_dir.parent.parent / \"Data\" / \"crsp\"\n",
-    "output_file = OUTPUT_DIR / f\"{table}_{year}.parquet\"\n",
+    "crsp_dir = get_processed_data_dir(\"wrds\",\"crsp\")\n",
+    "file_path = crsp_dir / f\"crsp_dsf_combined.parquet\"\n",
     "\n",
-    "df = pd.read_parquet(output_file)\n",
+    "df = pd.read_parquet(file_path)\n",
     "\n",
     "print(df.head())\n",
     "print(df.columns)\n",
@@ -35,112 +33,7 @@
    "execution_count": null,
    "id": "280c5269",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "============================================================\n",
-      "MISSING DATA ANALYSIS: dlycumfacshr\n",
-      "============================================================\n",
-      "Total missing values: 7,553 (0.03%)\n",
-      "Missing across 7,553 unique securities (43.65%)\n",
-      "Total securities: 17,303\n",
-      "============================================================\n",
-      "\n",
-      "============================================================\n",
-      "MARKET CAP ANALYSIS FOR MISSING: dlycumfacshr\n",
-      "============================================================\n",
-      "Total records with missing dlycumfacshr: 7,553\n",
-      "Records with missing market cap: 7,553\n",
-      "------------------------------------------------------------\n",
-      "Market Cap Distribution (for non-NA caps):\n",
-      "count   0.00\n",
-      "mean     NaN\n",
-      "std      NaN\n",
-      "min      NaN\n",
-      "25%      NaN\n",
-      "50%      NaN\n",
-      "75%      NaN\n",
-      "max      NaN\n",
-      "Name: dlycap, dtype: float64\n",
-      "============================================================\n",
-      "\n",
-      "============================================================\n",
-      "TIME SERIES MISSING DATA ANALYSIS: dlycumfacshr\n",
-      "============================================================\n",
-      "Total missing records: 7,553\n",
-      "Date range: 2010-01-04 to 2024-12-31\n",
-      "Days with missing: 2,834 / 3,774\n",
-      "Average missing per affected day: 2.67\n",
-      "------------------------------------------------------------\n",
-      "Most recent 20 dates with missing data:\n",
-      "dlycaldt\n",
-      "2024-11-29     5\n",
-      "2024-12-02     3\n",
-      "2024-12-03     4\n",
-      "2024-12-04     1\n",
-      "2024-12-06     4\n",
-      "2024-12-09     3\n",
-      "2024-12-10     1\n",
-      "2024-12-11     3\n",
-      "2024-12-12     2\n",
-      "2024-12-13     4\n",
-      "2024-12-16     9\n",
-      "2024-12-17     9\n",
-      "2024-12-18     3\n",
-      "2024-12-20     4\n",
-      "2024-12-23    10\n",
-      "2024-12-24     5\n",
-      "2024-12-26     2\n",
-      "2024-12-27     2\n",
-      "2024-12-30     5\n",
-      "2024-12-31     1\n",
-      "dtype: int64\n",
-      "\n",
-      "------------------------------------------------------------\n",
-      "TERMINAL OBSERVATION ANALYSIS\n",
-      "------------------------------------------------------------\n",
-      "Securities with missing data: 7,553\n",
-      "All missing values are terminal: 7,553 (100.0%)\n",
-      "Non-terminal missing values: 0\n",
-      "\n",
-      "------------------------------------------------------------\n",
-      "CONTIGUITY ANALYSIS\n",
-      "------------------------------------------------------------\n",
-      "Contiguous missing blocks: 7,553 (100.0%)\n",
-      "Scattered missing values: 0\n",
-      "============================================================\n",
-      "\n",
-      "============================================================\n",
-      "TRADING STATUS ANALYSIS FOR MISSING: dlycumfacshr\n",
-      "============================================================\n",
-      "Total records with missing dlycumfacshr: 7,553\n",
-      "------------------------------------------------------------\n",
-      "Trading Status Breakdown:\n",
-      "tradingstatusflg\n",
-      "D       7545\n",
-      "<NA>       8\n",
-      "Name: count, dtype: Int64\n",
-      "------------------------------------------------------------\n",
-      "Delisted ('D') Securities: 7,545 (99.9%)\n",
-      "============================================================\n",
-      "\n",
-      "============================================================\n",
-      "SHARE TYPE ANALYSIS FOR MISSING: dlycumfacshr\n",
-      "============================================================\n",
-      "Total records with missing dlycumfacshr: 7,553\n",
-      "------------------------------------------------------------\n",
-      "Share Type Breakdown:\n",
-      "sharetype\n",
-      "N/A     7545\n",
-      "<NA>       8\n",
-      "Name: count, dtype: Int64\n",
-      "============================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -162,10 +55,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "508f2df6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original shape: (29132307, 24)\n",
+      "Unique permnos before filtering: 17303\n",
+      "Filtered shape: (29132303, 24)\n",
+      "Unique permnos after filtering: 17299\n",
+      "Removed 4 permnos\n",
+      "Removed 4 rows (0.00%)\n",
+      "Original shape: (29132303, 24)\n",
+      "Unique permnos before filtering: 17299\n",
+      "Filtered shape: (19599915, 24)\n",
+      "Unique permnos after filtering: 10790\n",
+      "Removed 6509 permnos\n",
+      "Total 50%+ gaps: 4053\n",
+      "Percentage: 0.0207%\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -196,26 +109,18 @@
     "num_observations = 0\n",
     "\n",
     "# group by permno\n",
-    "for permno, group in df.group_by('permno'):\n",
-    "    # create bar to bar gap \n",
-    "    group['overnight_gap'] = ((group['open'].shift(1) - group['close']) / group['open'] ) * 100\n",
-    "\n",
+    "for permno, group in df.groupby('permno'):\n",
+    "    # create bar to bar gap (current open vs previous close)\n",
+    "    # group = group.copy()  # Avoid SettingWithCopyWarning\n",
+    "    group['overnight_gap'] = ((group['adj_open'] - group['adj_close'].shift(1)) / group['adj_close'].shift(1)) * 100\n",
+    "    \n",
     "    observations = group['overnight_gap'] > 50\n",
+    "    \n",
+    "    num_observations += observations.sum()\n",
     "\n",
-    "    num_observations+= len(observations)    \n",
-    "\n",
-    "print(num_observations)\n",
-    "print(num_observations/len(df))\n",
-    "\n"
+    "print(f\"Total 50%+ gaps: {num_observations}\")\n",
+    "print(f\"Percentage: {num_observations/len(df) * 100:.4f}%\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6bc913e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
